# CppAIService

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  README.md
AIApps/ChatServer/include/: ChatServer.h
AIApps/ChatServer/include/AIUtil/: AIConfig.h  AIFactory.h  AIHelper.h  AISessionIdGenerator.h  AISpeechProcessor.h  AIStrategy.h  AIToolRegistry.h  ImageRecognizer.h  MQManager.h
AIApps/ChatServer/include/handlers/: AIMenuHandler.h  AIUploadHandler.h  AIUploadSendHandler.h  ChatCreateAndSendHandler.h  ChatEntryHandler.h  ChatHandler.h  ChatHistoryHandler.h  ChatLoginHandler.h  ChatLogoutHandler.h  ChatRegisterHandler.h  ChatSendHandler.h  ChatSessionsHandler.h  ChatSpeechHandler.h
AIApps/ChatServer/resource/: AI.html  NotFound.html  config.json  entry.html  menu.html  upload.html
AIApps/ChatServer/src/: ChatServer.cpp  main.cpp
AIApps/ChatServer/src/AIUtil/: AIConfig.cpp  AIFactory.cpp  AIHelper.cpp  AISessionIdGenerator.cpp  AISpeechProcessor.cpp  AIStrategy.cpp  AIToolRegistry.cpp  ImageRecognizer.cpp  MQManager.cpp  base64.cpp
AIApps/ChatServer/src/handlers/: AIMenuHandler.cpp  AIUploadHandler.cpp  AIUploadSendHandler.cpp  ChatCreateAndSendHandler.cpp  ChatEntryHandler.cpp  ChatHandler.cpp  ChatHistoryHandler.cpp  ChatLoginHandler.cpp  ChatLogoutHandler.cpp  ChatRegisterHandler.cpp  ChatSendHandler.cpp  ChatSessionsHandler.cpp  ChatSpeechHandler.cpp
HttpServer/include/http/: HttpResponse.h  HttpServer.h
HttpServer/include/session/: SessionStorage.h
HttpServer/include/utils/: FileUtil.h  MysqlUtil.h
HttpServer/include/utils/db/: DbConnection.h  DbConnectionPool.h
HttpServer/src/http/: HttpRequest.cpp  HttpServer.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/session/: SessionStorage.cpp
HttpServer/src/ssl/: SslContext.cpp
HttpServer/src/utils/db/: DbConnection.cpp  DbConnectionPool.cpp
docs/: BUILD_ON_VM.md
scripts/: setup_vm.sh
